--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -109,29 +109,33 @@
        
 
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="3">
-            <TextBlock Margin="30,0,0,0" > Tempering delay </TextBlock>
+                <TextBlock Margin="30,0,0,0" > Tempering delay time Feed-to-Return (s)</TextBlock>
         </StackPanel>
-        <TextBlock Grid.Row="1" Grid.Column="4" Margin="0,0,0,0" > Feed - Return (s)</TextBlock>
+       <!-- <TextBlock Grid.Row="1" Grid.Column="4" Margin="0,0,0,0" > Feed - Return (s)</TextBlock> -->
             
-        <TextBlock Margin="0,0,0,0" Grid.Row="2" Grid.Column="4"> Calibrated + Tune = Total</TextBlock>
+        <TextBlock Margin="0,0,0,0" Grid.Row="2" Grid.Column="4"> Calibrate + Tune = Total</TextBlock>
 
             <TextBlock VerticalAlignment="Bottom"  Margin="30,0,0,0" Grid.Row="3" Grid.Column="3" Text="Hot pump"></TextBlock>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10,0,30,0" Grid.Row="3" Grid.Column="4">
-                <TextBlock  VerticalAlignment="Bottom" Margin="30,0,0,0" Text="8"></TextBlock>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,30,0" Grid.Row="3" Grid.Column="4">
+                <TextBlock  VerticalAlignment="Bottom" Margin="0,0,0,0" Text="8"></TextBlock>
+                <TextBlock  VerticalAlignment="Bottom" Margin="15,0,0,0" Text="+"></TextBlock>
                 <TextBox VerticalAlignment="Bottom" Margin="10,0,0,0" Text="2"></TextBox>
+                <TextBlock  VerticalAlignment="Bottom" Margin="20,0,0,0" Text="="></TextBlock>
                 <TextBlock  VerticalAlignment="Bottom" Margin="10,0,0,0" Text="10"></TextBlock>
         </StackPanel>
 
             <TextBlock  Margin="30,0,0,0" VerticalAlignment="Bottom" Grid.Row="4" Grid.Column="3" Text="Cold pump"></TextBlock>
-        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="10,0,30,0" Grid.Row="4" Grid.Column="4">
-                <TextBlock VerticalAlignment="Bottom"  Margin="30,0,0,0" Text="10"></TextBlock>
+        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,0,30,0" Grid.Row="4" Grid.Column="4">
+                <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="0,0,0,0" Text="10"></TextBlock>
+                <TextBlock  VerticalAlignment="Bottom" Margin="10,0,0,0" Text="+"></TextBlock>
                 <TextBox Margin="10,0,0,0" VerticalAlignment="Bottom" Text="2"></TextBox>
+                <TextBlock  VerticalAlignment="Bottom" Margin="20,0,0,0" Text="="></TextBlock>
                 <TextBlock  Margin="10,0,0,0" VerticalAlignment="Bottom" Text="12"></TextBlock>
         </StackPanel>
 
 
             <chart:SfChart  
-            Header="Calibration Tuning"
+            Header="Feed and Return delay timings"
             Legend="Legend"
             Grid.Row="0"
             Grid.RowSpan="6"
@@ -143,6 +147,7 @@
             <chart:SfChart.SecondaryAxis>
                     <chart:NumericalAxis Name="MyYAxis" Minimum="0" Interval="10" Maximum="100" EnableAutoIntervalOnZooming="False">
                         <chart:NumericalAxis.StripLines>
+                            <chart:ChartStripLine Name="FreezeButtonStripLine" IsSegmented="True" Label="Freeze/Run" SegmentStartValue="0" SegmentEndValue="8" Start="0" Width="15" IsTapEnabled="True"  Tapped="FreezeDelayChart" Background="GreenYellow"></chart:ChartStripLine>
                             <chart:ChartStripLine Name="DiffStripline" IsSegmented="True" SegmentStartValue="11" SegmentEndValue="15" Start="60" Width="10" Label="13" Background="Yellow"></chart:ChartStripLine>
                         </chart:NumericalAxis.StripLines>
                     </chart:NumericalAxis>
@@ -203,7 +208,7 @@
         </chart:SfChart>
 
             <chart:SfChart  
-            Header="Volume Balance"
+            Header="Buffer tank Volume balance"
             Legend="Legend"
             Grid.Row="6"
             Grid.RowSpan="5"
@@ -215,13 +220,14 @@
                 <chart:SfChart.SecondaryAxis>
                     <chart:NumericalAxis Minimum="0" Interval="20" Maximum="300" EnableAutoIntervalOnZooming="False">
                         <chart:NumericalAxis.StripLines>
-                            <chart:ChartStripLine IsSegmented="True" SegmentStartValue="11" SegmentEndValue="15" Start="60" Width="10" Label="13" Background="Yellow"></chart:ChartStripLine>
+                            <chart:ChartStripLine Name="FreezeButtonVolumeStripLine" IsSegmented="True" Label="Freeze/Run" SegmentStartValue="0" SegmentEndValue="8" Start="0" Width="40" IsTapEnabled="True"  Tapped="FreezeVolumeChart" Background="GreenYellow"></chart:ChartStripLine>
+                            <chart:ChartStripLine IsSegmented="True" SegmentStartValue="11" SegmentEndValue="15" Start="60" Width="30" Label="60" Background="Yellow"></chart:ChartStripLine>
                         </chart:NumericalAxis.StripLines>
                     </chart:NumericalAxis>
                 </chart:SfChart.SecondaryAxis>
                 <chart:SfChart.Annotations>
-                    <chart:HorizontalLineAnnotation Name="PhaseHLine1"  CanDrag="True" DragCompleted="PhaseLine1_Dragged"  Width="2" CoordinateUnit="Axis" Y1="50"></chart:HorizontalLineAnnotation>
-                    <chart:HorizontalLineAnnotation Name="PhaseHLine2" CanDrag="True"  DragCompleted="PhaseLine2_Dragged" CoordinateUnit="Axis" Y1="75"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="PhaseHLine1"  CanDrag="True" DragCompleted="PhaseLine1_Dragged"  Width="3" Fill="Chocolate" CoordinateUnit="Axis" Y1="150"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="PhaseHLine2" CanDrag="True"  DragCompleted="PhaseLine2_Dragged" Width="4" Fill="DarkOrange" CoordinateUnit="Axis" Y1="90"></chart:HorizontalLineAnnotation>
                 </chart:SfChart.Annotations>
                 <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:LineSeries>
                 <chart:LineSeries LegendIcon="SeriesType" Label="Label" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:LineSeries>
@@ -229,7 +235,7 @@
             </chart:SfChart>
 
             <chart:SfChart  
-            Header="Energy Balance"
+            Header="Hot and Cold tanks Energy balance"
             Legend="Legend"
             Grid.Row="6"
             Grid.RowSpan="5"
@@ -242,13 +248,15 @@
                 <chart:SfChart.SecondaryAxis>
                     <chart:NumericalAxis Minimum="0" Interval="10" Maximum="100" EnableAutoIntervalOnZooming="False">
                         <chart:NumericalAxis.StripLines>
-                            <chart:ChartStripLine IsSegmented="True" SegmentStartValue="11" SegmentEndValue="15" Start="60" Width="10" Label="13" Background="Yellow"></chart:ChartStripLine>
+                            <chart:ChartStripLine Name="FreezeEnergyButtonStripLine" IsSegmented="True" Label="Freeze/Run" SegmentStartValue="0" SegmentEndValue="8" Start="0" Width="15" IsTapEnabled="True"  Tapped="FreezeEnergyChart" Background="GreenYellow"></chart:ChartStripLine>
+                            <chart:ChartStripLine IsSegmented="True" SegmentStartValue="10" SegmentEndValue="15" Start="60" Width="10" Label="20" Background="Yellow"></chart:ChartStripLine>
+
                         </chart:NumericalAxis.StripLines>
                     </chart:NumericalAxis>
                 </chart:SfChart.SecondaryAxis>
                 <chart:SfChart.Annotations>
-                    <chart:HorizontalLineAnnotation Name="PhaseHLine3"  CanDrag="True" DragCompleted="PhaseLine1_Dragged"  Width="2" CoordinateUnit="Axis" Y1="60"></chart:HorizontalLineAnnotation>
-                    <chart:HorizontalLineAnnotation Name="PhaseHLine4" CanDrag="True"  DragCompleted="PhaseLine2_Dragged" CoordinateUnit="Axis" Y2="82"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="PhaseHLine3"  CanDrag="True" DragCompleted="PhaseLine1_Dragged"  Width="2" CoordinateUnit="Axis" Y1="45"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="PhaseHLine4" CanDrag="True"  DragCompleted="PhaseLine2_Dragged" Width="3" CoordinateUnit="Axis" Y1="65" Y2="90"></chart:HorizontalLineAnnotation>
                 </chart:SfChart.Annotations>
                 <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
                 <chart:LineSeries LegendIcon="SeriesType" Label="Label" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:LineSeries>
