--- a/DemoPrototype/CalibratePage.xaml
+++ b/DemoPrototype/CalibratePage.xaml
@@ -19,7 +19,8 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*"></ColumnDefinition>
@@ -36,20 +37,29 @@
         </Grid.DataContext>
 
         <chart:SfChart  
-            Header="Tempering Delay Times (s)"
+            Header="Feed and Return delay timings (s)"
             Legend="Legend"
             Grid.Row="1"
             Grid.RowSpan="4"
             Grid.ColumnSpan="1"
             Margin="20,10,0,0">
             <chart:SfChart.PrimaryAxis>
-                <chart:CategoryAxis ></chart:CategoryAxis>
+                <chart:CategoryAxis Name="MyXAxis"></chart:CategoryAxis>
             </chart:SfChart.PrimaryAxis>
             <chart:SfChart.SecondaryAxis>
-                <chart:NumericalAxis  Interval="1" EnableAutoIntervalOnZooming="False">
+                <chart:NumericalAxis Name="MyYAxis" Minimum="0" Interval="10" Maximum="100" EnableAutoIntervalOnZooming="False">
+                    <chart:NumericalAxis.StripLines>
+                        <chart:ChartStripLine Name="FreezeButtonStripLine" IsSegmented="True" Label="Freeze/Run" SegmentStartValue="0" SegmentEndValue="8" Start="0" Width="15" IsTapEnabled="True"  Tapped="CalibrateFreezeDelayChart" Background="GreenYellow"></chart:ChartStripLine>
+                        <chart:ChartStripLine Name="DiffStripline" IsSegmented="True" SegmentStartValue="11" SegmentEndValue="15" Start="60" Width="10" Label="13" Background="Yellow"></chart:ChartStripLine>
+                    </chart:NumericalAxis.StripLines>
                 </chart:NumericalAxis>
             </chart:SfChart.SecondaryAxis>
-            <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="State" ItemsSource="{Binding power}"></chart:LineSeries>
+            <chart:SfChart.Annotations>
+                <chart:VerticalLineAnnotation Name="PhaseVLine1"  CanDrag="True" DragCompleted="CalibratePhaseLine1_Dragged"  Width="2" CoordinateUnit="Axis" X1="5"></chart:VerticalLineAnnotation>
+                <chart:VerticalLineAnnotation Name="PhaseVLine2" CanDrag="True"  DragCompleted="CalibratePhaseLine2_Dragged" CoordinateUnit="Axis" X1="22"></chart:VerticalLineAnnotation>
+            </chart:SfChart.Annotations>
+            <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
+            <chart:LineSeries LegendIcon="SeriesType" Label="Label" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:LineSeries>
         </chart:SfChart>
 
         <Button Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="100" Content="Hot step "></Button>
@@ -59,22 +69,23 @@
             <ToggleSwitch  Margin="5,0,0,0"  VerticalAlignment="Center" IsOn="False" ></ToggleSwitch>
         </StackPanel>
 
+        <TextBlock VerticalAlignment="Top" Grid.Column="3" Grid.ColumnSpan="2"> Tempering delay time Feed-to-Return (s) </TextBlock>
         <TextBlock Grid.Column="3" VerticalAlignment="Bottom"  Text="Calibrate"></TextBlock>
         <TextBlock Grid.Column="4" VerticalAlignment="Bottom" Text="Tune"></TextBlock>
         <TextBlock Grid.Column="5" VerticalAlignment="Bottom" Text="Total"></TextBlock>
         <TextBlock Grid.Row="1" Grid.Column="2" Text="Hot pump" VerticalAlignment="Bottom" HorizontalAlignment="Center"> </TextBlock>
-        <TextBox Grid.Row="1"  VerticalAlignment="Bottom" Grid.Column="3" Text="8"></TextBox>
-        <TextBox Grid.Row="1" VerticalAlignment="Bottom" Grid.Column="4" Text="2"></TextBox>
-        <TextBox Grid.Row="1" VerticalAlignment="Bottom" Grid.Column="5" Text="10"></TextBox>
+        <TextBox Grid.Row="1"  VerticalAlignment="Bottom" Grid.Column="3"  Text="8"></TextBox>
+        <TextBox Grid.Row="1" VerticalAlignment="Bottom" Grid.Column="4" BorderThickness="0" IsReadOnly="True" Text="2"></TextBox>
+        <TextBox Grid.Row="1" VerticalAlignment="Bottom" Grid.Column="5" BorderThickness="0" IsReadOnly="True" Text="10"></TextBox>
 
         <TextBlock Grid.Row="2" Grid.Column="2" Text="Cold pump" VerticalAlignment="Bottom" HorizontalAlignment="Center"></TextBlock>
-        <TextBox Grid.Row="2"  VerticalAlignment="Bottom" Grid.Column="3" Text="10"></TextBox>
-        <TextBox Grid.Row="2" VerticalAlignment="Bottom" Grid.Column="4" Text="0"></TextBox>
-        <TextBox Grid.Row="2" VerticalAlignment="Bottom" Grid.Column="5" Text="10"></TextBox>
+        <TextBox Grid.Row="2"  VerticalAlignment="Bottom" Grid.Column="3"  Text="10"></TextBox>
+        <TextBox Grid.Row="2" VerticalAlignment="Bottom" Grid.Column="4" BorderThickness="0" IsReadOnly="True" Text="0"></TextBox>
+        <TextBox Grid.Row="2" VerticalAlignment="Bottom" Grid.Column="5" BorderThickness="0" IsReadOnly="True" Text="10"></TextBox>
 
 
         <chart:SfChart  
-            Header="Energy Balance"
+            Header="Hot and Cold tanks Energy balance (°C)"
             Legend="Legend"
             Grid.Row="6"
             Grid.RowSpan="3"
@@ -84,34 +95,70 @@
                 <chart:CategoryAxis ></chart:CategoryAxis>
             </chart:SfChart.PrimaryAxis>
             <chart:SfChart.SecondaryAxis>
-                <chart:NumericalAxis  Interval="10" EnableAutoIntervalOnZooming="False">
+                <chart:NumericalAxis Minimum="0" Interval="10" Maximum="100" EnableAutoIntervalOnZooming="False">
+                    <chart:NumericalAxis.StripLines>
+                        <chart:ChartStripLine Name="FreezeEnergyButtonStripLine" IsSegmented="True" Label="Freeze/Run" SegmentStartValue="0" SegmentEndValue="8" Start="0" Width="15" IsTapEnabled="True"  Tapped="CalibrateFreezeEnergyChart" Background="GreenYellow"></chart:ChartStripLine>
+                        <chart:ChartStripLine IsSegmented="True" SegmentStartValue="10" SegmentEndValue="15" Start="60" Width="10" Label="20" Background="Yellow"></chart:ChartStripLine>
+
+                    </chart:NumericalAxis.StripLines>
                 </chart:NumericalAxis>
             </chart:SfChart.SecondaryAxis>
-            <chart:LineSeries XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"></chart:LineSeries>
-            <chart:LineSeries XBindingPath="ElapsedTime" YBindingPath="TCoolTank" ItemsSource="{Binding power}"></chart:LineSeries>
-            <chart:LineSeries XBindingPath="ElapsedTime" YBindingPath="TReturnValve" ItemsSource="{Binding power}"></chart:LineSeries>
+            <chart:SfChart.Annotations>
+                <chart:HorizontalLineAnnotation Name="PhaseHLine3"  CanDrag="True" DragCompleted="CalibratePhaseLine1_Dragged"  Width="2" CoordinateUnit="Axis" Y1="45"></chart:HorizontalLineAnnotation>
+                <chart:HorizontalLineAnnotation Name="PhaseHLine4" CanDrag="True"  DragCompleted="CalibratePhaseLine2_Dragged" Width="3" CoordinateUnit="Axis" Y1="65" Y2="90"></chart:HorizontalLineAnnotation>
+            </chart:SfChart.Annotations>
+            <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
+            <chart:LineSeries LegendIcon="SeriesType" Label="Label" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:LineSeries>
         </chart:SfChart>
 
+        <TextBlock Margin="15,0,0,0"  Grid.Row="9" VerticalAlignment="Center" Text="Hot to cold Return valve switching threshold:"></TextBlock>
+        <StackPanel Grid.Column="0" HorizontalAlignment="Right" Orientation="Horizontal" Grid.Row="9">
+            <TextBox Height="30" Text="90"></TextBox>
+            <TextBlock  VerticalAlignment="Center" Text=" °C"></TextBlock>
+        </StackPanel>
+        <TextBlock Margin="15,0,0,0"  Grid.Row="10" VerticalAlignment="Center" Text="Cold to Hot Return valve switching threshold:"></TextBlock>
+        <StackPanel Grid.Column="0" HorizontalAlignment="Right" Orientation="Horizontal"  Grid.Row="10">
+            <TextBox Height="30"  Text="95"></TextBox>
+            <TextBlock  VerticalAlignment="Center" Text=" °C"></TextBlock>
+        </StackPanel>
+
         <chart:SfChart  
-            Header="Volume Balance"
+            Header="Buffer tank Volume balance (°C)"
             Legend="Legend"
             Grid.Row="6"
              Grid.Column="2"
             Grid.RowSpan="3"
             Grid.ColumnSpan="3"
             Margin="20,10,0,0">
-        <chart:SfChart.PrimaryAxis>
-            <chart:CategoryAxis ></chart:CategoryAxis>
-        </chart:SfChart.PrimaryAxis>
-        <chart:SfChart.SecondaryAxis>
-            <chart:NumericalAxis  Interval="10" EnableAutoIntervalOnZooming="False">
-            </chart:NumericalAxis>
-        </chart:SfChart.SecondaryAxis>
-        <chart:LineSeries  XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:LineSeries>
-        <chart:LineSeries  XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:LineSeries>
-        <chart:LineSeries  XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:LineSeries>
-
+            <chart:SfChart.PrimaryAxis>
+                <chart:CategoryAxis ></chart:CategoryAxis>
+            </chart:SfChart.PrimaryAxis>
+            <chart:SfChart.SecondaryAxis>
+                <chart:NumericalAxis Minimum="0" Interval="20" Maximum="300" EnableAutoIntervalOnZooming="False">
+                    <chart:NumericalAxis.StripLines>
+                        <chart:ChartStripLine Name="FreezeButtonVolumeStripLine" IsSegmented="True" Label="Freeze/Run" SegmentStartValue="0" SegmentEndValue="8" Start="0" Width="40" IsTapEnabled="True"  Tapped="CalibrateFreezeVolumeChart" Background="GreenYellow"></chart:ChartStripLine>
+                        <chart:ChartStripLine IsSegmented="True" SegmentStartValue="11" SegmentEndValue="15" Start="60" Width="30" Label="60" Background="Yellow"></chart:ChartStripLine>
+                    </chart:NumericalAxis.StripLines>
+                </chart:NumericalAxis>
+            </chart:SfChart.SecondaryAxis>
+            <chart:SfChart.Annotations>
+                <chart:HorizontalLineAnnotation Name="PhaseHLine1"  CanDrag="True" DragCompleted="CalibratePhaseLine1_Dragged"  Width="3" Fill="Chocolate" CoordinateUnit="Axis" Y1="127"></chart:HorizontalLineAnnotation>
+                <chart:HorizontalLineAnnotation Name="PhaseHLine2" CanDrag="True"  DragCompleted="CalibratePhaseLine2_Dragged" Width="4" Fill="DarkOrange" CoordinateUnit="Axis" Y1="17"></chart:HorizontalLineAnnotation>
+            </chart:SfChart.Annotations>
+            <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:LineSeries>
+            <chart:LineSeries LegendIcon="SeriesType" Label="Label" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:LineSeries>
+            <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:LineSeries>
         </chart:SfChart>
 
+        <TextBlock Margin="20,0,0,0" Grid.Column="2" Grid.Row="9" VerticalAlignment="Center" Text="Cold end limit:"></TextBlock>
+        <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="9">
+            <TextBox Height="30" Text="127"></TextBox>
+            <TextBlock  VerticalAlignment="Center" Text=" °C"></TextBlock>
+        </StackPanel>
+        <TextBlock Margin="20,0,0,0" Grid.Column="2" Grid.Row="10" VerticalAlignment="Center" Text="Hot end limit:"></TextBlock>
+        <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="10">
+            <TextBox Height="30"  Text="17"></TextBox>
+            <TextBlock  VerticalAlignment="Center" Text=" °C"></TextBlock>
+        </StackPanel>
     </Grid>
 </Page>
