--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -163,31 +163,46 @@
         <chart:SfChart  
             Header="Parameter Monitoring"
             Margin="20,10,0,0"
-            Legend="Legend"
-            Grid.Row="11"
+           Grid.Row="11"
             Grid.RowSpan="5"
             Grid.Column="2"
             Grid.ColumnSpan="3">
             <chart:SfChart.PrimaryAxis>
                 <chart:CategoryAxis ></chart:CategoryAxis>
             </chart:SfChart.PrimaryAxis>
-                <chart:SfChart.SecondaryAxis>
-                    <chart:NumericalAxis Minimum="0" Interval="10" Maximum="300" EnableAutoIntervalOnZooming="False">
-                        <chart:NumericalAxis.StripLines>
-                            <chart:ChartStripLine Start="200" Width="20" Label="Hot Tank Safe Zone" Background="PaleGreen"></chart:ChartStripLine>
-                            <chart:ChartStripLine Start="15" Width="30" Label="Cool Tank Safe Zone" Background="PaleGoldenrod"></chart:ChartStripLine>
-                        </chart:NumericalAxis.StripLines>
-                    </chart:NumericalAxis>
-                </chart:SfChart.SecondaryAxis>
-            <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
-            <chart:LineSeries LegendIcon="SeriesType" Label="Label" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:LineSeries>
-            <chart:LineSeries XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"></chart:LineSeries>
-            <chart:LineSeries Label="This is a Label"  XBindingPath="ElapsedTime" YBindingPath="TCoolTank"  ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries LegendIcon="SeriesType" Label="Label" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries  Label="This is a Label"  XBindingPath="ElapsedTime" YBindingPath="TReturnValve" ItemsSource="{Binding power}"></chart:LineSeries>
-            </chart:SfChart>
+            
+            <chart:SfChart.SecondaryAxis>
+                <chart:NumericalAxis Minimum="0" Interval="10" Maximum="300" EnableAutoIntervalOnZooming="False">
+                    <chart:NumericalAxis.StripLines>
+                        <chart:ChartStripLine Start="200" Width="20" Label="Hot Tank Safe Zone" Background="PaleGreen"></chart:ChartStripLine>
+                        <chart:ChartStripLine Start="15" Width="30" Label="Cool Tank Safe Zone" Background="PaleGoldenrod"></chart:ChartStripLine>
+                    </chart:NumericalAxis.StripLines>
+                </chart:NumericalAxis>
+            </chart:SfChart.SecondaryAxis>
+
+            <chart:SfChart.Legend>
+                    <chart:ChartLegend DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Visible"/>
+            </chart:SfChart.Legend>
+
+            <chart:FastLineBitmapSeries Label="Ret Actual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:FastLineBitmapSeries>
+            <chart:FastLineBitmapSeries Label="Ret Forecasted" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:FastLineBitmapSeries>
+            <chart:FastLineBitmapSeries Label="Hot tank" XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"></chart:FastLineBitmapSeries>
+            <chart:FastLineBitmapSeries Label="Cool tank"  XBindingPath="ElapsedTime" YBindingPath="TCoolTank"  ItemsSource="{Binding power}"></chart:FastLineBitmapSeries>
+            <chart:FastLineSeries Label="Hot Buffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:FastLineSeries>
+            <chart:FastLineSeries Label="Mid Buffer" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:FastLineSeries>
+            <chart:FastLineSeries Label="Cold Buffer" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:FastLineSeries>
+            <chart:FastLineBitmapSeries Label="Ret Valve"  XBindingPath="ElapsedTime" YBindingPath="TReturnValve" ItemsSource="{Binding power}"></chart:FastLineBitmapSeries>
+            
+            <!-- chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></>
+        <chart:LineSeries LegendIcon="SeriesType" Label="Label" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:LineSeries>
+        <chart:LineSeries XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"></chart:LineSeries>
+        <chart:LineSeries Label="This is a Label"  XBindingPath="ElapsedTime" YBindingPath="TCoolTank"  ItemsSource="{Binding power}"></chart:LineSeries>
+            <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:LineSeries>
+            <chart:LineSeries LegendIcon="SeriesType" Label="Label" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:LineSeries>
+            <chart:LineSeries LegendIcon="Diamond" Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:LineSeries>
+            <chart:LineSeries  Label="This is a Label"  XBindingPath="ElapsedTime" YBindingPath="TReturnValve" ItemsSource="{Binding power}"></chart:LineSeries -->
+            
+        </chart:SfChart>
 
         <chart:SfChart  
             Header="AOU / IMM Interaction"
